# python-repo-template

./: .travis.yml  Jenkinsfile  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_to_freeze.txt  setup.cfg
python_repo_template/: MyClass.py  __init__.py  __main__.py  my_submodule.py
tests/: test_python_repo_template.py  test_unit_prt.py
