[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "python_repo_template"
version = "0.1.0"
description = "Beschreibung deines Projekts"
readme = "README.md"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
requires-python = ">=3.10"

authors = [
    { name = "Dein Name", email = "deine@email.de" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    ]

dependencies = [# put your dependencies here e.g
    "requests"
]
dev = [
    "pytest",
    "pytest-cov",
    "pipdeptree",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["venv310"]

[project.urls]
"Homepage" = "https://github.com/jboegeholz/python-repo-template"
"Repository" = "https://github.com/jboegeholz/python-repo-template"
