[metadata]
name = your_project_name
author = your_name
author-email = your_email
summary = your_project_description
description-file = README.md
home-page = your_project_home_page
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    tutorial

[files]
packages =
    python_repo_template